Fix media-text-block: do not switch from grid to flex on mobile (#1295)

--- a/sass/wp-blocks/media-text.scss
+++ b/sass/wp-blocks/media-text.scss
@@ -19,12 +19,10 @@
         width: 100% !important;
     }
 
-    @include media-breakpoint-down(md) {
-        display: flex;
-        row-gap: var(--double-grid-margin);
+    &.is-stacked-on-mobile {
 
-        &.is-stacked-on-mobile {
-            flex-direction: column !important;
+        @include media-breakpoint-down(md) {
+            row-gap: var(--double-grid-margin);
         }
     }
 
